--- a/index.html
+++ b/index.html
@@ -144,6 +144,8 @@
             font-weight: 800;
             margin-bottom: 1.5rem;
             background: linear-gradient(135deg, #1e40af 0%, #dc2626 100%);
+            background-clip: text;
+            background-clip: text;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
@@ -1814,54 +1816,6 @@
         </div>
     </section>
 
-    <!-- Section À qui ce service s'adresse -->
-    <section class="target-audience">
-        <div class="container">
-            <div class="target-audience-header fade-in">
-                <h2>À qui ce service s'adresse ?</h2>
-                <p>La Cabane d'Expression est conçue pour tous les administrés de votre ville, quels que soient leurs besoins ou leurs situations.</p>
-            </div>
-
-            <div class="audience-grid">
-                <div class="audience-card fade-in">
-                    <div class="audience-icon">👨‍👩‍👧‍👦</div>
-                    <h3>Familles</h3>
-                    <p>Pour toutes les démarches liées à la vie familiale et l'accompagnement au quotidien.</p>
-                    <div class="audience-examples">
-                        Inscription scolaire • Activités périscolaires • Aide sociale
-                    </div>
-                </div>
-
-                <div class="audience-card fade-in">
-                    <div class="audience-icon">👴</div>
-                    <h3>Seniors</h3>
-                    <p>Un accompagnement adapté pour les seniors et leurs besoins spécifiques.</p>
-                    <div class="audience-examples">
-                        Services à domicile • Activités seniors • Aide administrative
-                    </div>
-                </div>
-
-                <div class="audience-card fade-in">
-                    <div class="audience-icon">🏃</div>
-                    <h3>Jeunes actifs</h3>
-                    <p>Des solutions rapides et efficaces pour les citoyens pressés.</p>
-                    <div class="audience-examples">
-                        Démarches en ligne • Services express • Rendez-vous flexibles
-                    </div>
-                </div>
-
-                <div class="audience-card fade-in">
-                    <div class="audience-icon">🏠</div>
-                    <h3>Nouveaux arrivants</h3>
-                    <p>Un accueil personnalisé pour bien s'intégrer dans la commune.</p>
-                    <div class="audience-examples">
-                        Guide pratique • Services municipaux • Vie locale
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- Fonctionnement Section -->
     <section id="fonctionnement" class="section">
         <div class="container">
@@ -1924,53 +1878,49 @@
         </div>
     </section>
 
-    <!-- Problèmes actuels Section -->
-    <section class="section current-problems-section">
+    <!-- Section À qui ce service s'adresse -->
+    <section class="target-audience">
         <div class="container">
-            <h2 class="section-title fade-in">🚨 Problèmes actuels rencontrés par les mairies</h2>
-            
-            <div class="problem-solution-card fade-in">
-                <h3 class="problem-title">Trop de sollicitations dispersées</h3>
-                <p class="problem-description">Appels, mails, rendez-vous, messages Facebook → difficile de centraliser les demandes.</p>
-                <div class="solution">
-                    <span class="solution-icon">👉</span>
-                    <p>La cabane sert de point unique de recueil des besoins et préoccupations, organisé et orienté automatiquement.</p>
-                </div>
+            <div class="target-audience-header fade-in">
+                <h2>À qui ce service s'adresse ?</h2>
+                <p>La Cabane d'Expression est conçue pour tous les administrés de votre ville, quels que soient leurs besoins ou leurs situations.</p>
             </div>
 
-            <div class="problem-solution-card fade-in">
-                <h3 class="problem-title">Agents surchargés par des demandes récurrentes ou hors-sujet</h3>
-                <p class="problem-description">Les secrétariats passent beaucoup de temps à répondre à des questions simples ou à orienter vers le bon service.</p>
-                <div class="solution">
-                    <span class="solution-icon">👉</span>
-                    <p>La cabane fait le pré-tri et oriente directement vers le bon service → gain de temps pour les équipes.</p>
+            <div class="audience-grid">
+                <div class="audience-card fade-in">
+                    <div class="audience-icon">👨‍👩‍👧‍👦</div>
+                    <h3>Familles</h3>
+                    <p>Pour toutes les démarches liées à la vie familiale et l'accompagnement au quotidien.</p>
+                    <div class="audience-examples">
+                        Inscription scolaire • Activités périscolaires • Aide sociale
+                    </div>
                 </div>
-            </div>
 
-            <div class="problem-solution-card fade-in">
-                <h3 class="problem-title">Manque de lien de confiance avec les habitants</h3>
-                <p class="problem-description">Certains citoyens n'osent pas exprimer leurs problèmes (isolement, difficultés psychologiques, etc.).</p>
-                <div class="solution">
-                    <span class="solution-icon">👉</span>
-                    <p>La cabane offre un espace confidentiel et anonyme → les habitants s'expriment plus librement.</p>
+                <div class="audience-card fade-in">
+                    <div class="audience-icon">👴</div>
+                    <h3>Seniors</h3>
+                    <p>Un accompagnement adapté pour les seniors et leurs besoins spécifiques.</p>
+                    <div class="audience-examples">
+                        Services à domicile • Activités seniors • Aide administrative
+                    </div>
                 </div>
-            </div>
 
-            <div class="problem-solution-card fade-in">
-                <h3 class="problem-title">Difficulté à mesurer les besoins réels des habitants</h3>
-                <p class="problem-description">Les élus manquent de données fiables sur les préoccupations locales.</p>
-                <div class="solution">
-                    <span class="solution-icon">👉</span>
-                    <p>La cabane fournit des rapports clairs et synthétiques → meilleure compréhension des attentes citoyennes.</p>
+                <div class="audience-card fade-in">
+                    <div class="audience-icon">🏃</div>
+                    <h3>Jeunes actifs</h3>
+                    <p>Des solutions rapides et efficaces pour les citoyens pressés.</p>
+                    <div class="audience-examples">
+                        Démarches en ligne • Services express • Rendez-vous flexibles
+                    </div>
                 </div>
-            </div>
 
-            <div class="problem-solution-card fade-in">
-                <h3 class="problem-title">Image de la mairie parfois perçue comme distante ou bureaucratique</h3>
-                <p class="problem-description">Les habitants veulent une mairie plus proche, plus moderne et accessible.</p>
-                <div class="solution">
-                    <span class="solution-icon">👉</span>
-                    <p>La cabane incarne une mairie innovante et humaine, sans remplacer le contact humain des agents.</p>
+                <div class="audience-card fade-in">
+                    <div class="audience-icon">🏠</div>
+                    <h3>Nouveaux arrivants</h3>
+                    <p>Un accueil personnalisé pour bien s'intégrer dans la commune.</p>
+                    <div class="audience-examples">
+                        Guide pratique • Services municipaux • Vie locale
+                    </div>
                 </div>
             </div>
         </div>
